--- a/font-end/react-app/src/index.css
+++ b/font-end/react-app/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+}
+
+.btn {
+  height: 30px;
+}
