--- a/font-end/react-app/src/game_play.css
+++ b/font-end/react-app/src/game_play.css
@@ -191,3 +191,33 @@
     bottom: 1px;
     height: 10%;
 }
+
+.box-display-win {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    /* border: 1px solid salmon; */
+    text-align: center;
+    width: 70%;
+    margin-top: 3%;
+    height: auto;
+    max-height: 30%;
+    color: #5bdf41;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.box-display-win h1 {
+    transform: rotate(15deg);
+    /* border: 1px solid salmon; */
+    width: 30%;
+}
+
+#win-not-show {
+    display: none;
+}
+
+#win-show {
+    display: flex;
+}
+
