--- a/font-end/react-app/src/game_play.css
+++ b/font-end/react-app/src/game_play.css
@@ -221,3 +221,42 @@
     display: flex;
 }
 
+.back-drop-end-game {
+  box-shadow: 0.5px 0.5px 0px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 118;
+  background-color:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.back-drop-end-game .WIN {
+    color: #5bdf41;
+    font-size: 3em;
+    text-shadow: -1px 0 black, 1px 1.5px black, 1.8px 0 black, 0 -1px black;
+    margin-top: -24px;
+}
+
+.back-drop-end-game .player-win-game {
+    font-size: 2em;
+    text-shadow: -1px 0 black, 1px 1.5px white, 1.8px 0 white, 0 -1px white;
+}
+
+.back-drop-end-game .icon-close {
+    display: flex;
+    position: absolute;
+    top: 1px;
+    right: 12px;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #ddd;
+    cursor: pointer;
+}
