--- a/font-end/react-app/src/game_play.css
+++ b/font-end/react-app/src/game_play.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-point: rgb(169, 168, 224);
+    --bg-point: rgb(147, 203, 238);
 }
 
 .box-page {
@@ -24,7 +24,7 @@
 .god {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     font-size: 2em;
     color: black;
@@ -34,19 +34,50 @@
     justify-self: center;
     align-self: center;
     background-color: rgb(223, 199, 221);
+    position: relative;
+    z-index: 1;
 }
 
-.armor {
+.god-self {
+    bottom: 10px;
+    /* background-image: url('/fox2.jpg'); */
+}
+
+.god-enemy {
+    top: 10px;
+    /* background-image: url('/frog2.png'); */
+}
+
+.armor-bar {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 1em;
     width: 80px;
     height: 20px;
-    font-size: 1em;
-    /* justify-self: center; */
-    background-color: rgb(187, 175, 233);
-    /* align-self: center; */
+    background-color: rgb(110, 151, 240);
     position: relative;
+    z-index: 2;
+}
+
+.armor-bar-none {
+    display: none;
+}
+
+#armor-bar-hidden {
+    visibility: hidden;
+}
+
+.hp-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
+    width: 80px;
+    height: 20px;
+    background-color: rgb(49, 212, 85);
+    position: relative;
+    z-index: 2;
 }
 
 .card-all {
@@ -59,8 +90,11 @@
 .card-hand {
     background-color: rgb(223, 218, 199);
     display: inline-flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    overflow-y: auto;
+    position: relative;
+    padding: 0px 7%;
 }
 
 .card-play {
@@ -77,7 +111,15 @@
     grid-area: god1;
     grid-template-columns: 100px 1fr;
     grid-template-rows: 1fr;
-    background-color: #ddd;
+    /* background-color: #ddd; */
+}
+
+.box-god {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-all1 {
@@ -102,7 +144,7 @@
     grid-area: god2;
     grid-template-columns: 1fr 100px;
     grid-template-rows: 1fr;
-    background-color: #ddd;
+    /* background-color: #ddd; */
 }
 
 .card-all2 {
@@ -129,13 +171,32 @@
 }
 
 .point1 {
-    background-color: var(--bg-point);
+    /* background-color: var(--bg-point); */
     color: red;
 }
 
-.point2 {
-    background-color: var(--bg-point);
-    color: red;
+.point {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(79, 121, 238);
+    background-repeat: no-repeat;
+    background: linear-gradient(rgb(79, 121, 238), white);
+    border-radius: 50%;
+    height: 90px;
+    width: 90px;
+    align-self: center;
+    position: relative;
+}
+
+.point p {
+    font-family: Arial, Helvetica, sans-serif;
+    /* position: absolute;
+    top: 25%;
+    left: 40%; */
+    font-size: 1.8em;
+    margin: 0px;
+    color: #000;
 }
 
 .bd1 {
@@ -147,11 +208,13 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100px;
+    width: 80px;
+    min-width: 80px;
     height: 90%;
-    margin: 6px 12px;
+    margin: 6px auto;
     border: 1px solid gold;
     background-color: aliceblue;
+    bottom: 1%;
 }
 
 .card:focus {
@@ -183,6 +246,7 @@
 .card-description {
     text-align: start;
     height: 90%;
+    font-family: 'Kanit', sans-serif;
 }
 
 .card-point {
