--- a/font-end/react-app/src/game_play.css
+++ b/font-end/react-app/src/game_play.css
@@ -18,7 +18,13 @@
                          "god2 god2 god2";              
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(7, 1fr);
-    grid-gap: 20px;
+    grid-gap: 12px;
+    background-color: #41dfd218;
+    background: linear-gradient(to bottom, #41dfd218, #5ae0d563);
+    background-repeat: no-repeat;
+    max-height: 100vh;
+    /* background-image: url("https://i.pinimg.com/originals/60/1c/71/601c715eee01e1faeda7ecc9ecf1677c.jpg"); */
+    /* opacity: 0.5; */
 }
 
 .god {
@@ -34,18 +40,17 @@
     justify-self: center;
     align-self: center;
     background-color: rgb(223, 199, 221);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.849);
     position: relative;
     z-index: 1;
 }
 
 .god-self {
     bottom: 10px;
-    /* background-image: url('/fox2.jpg'); */
 }
 
 .god-enemy {
     top: 10px;
-    /* background-image: url('/frog2.png'); */
 }
 
 .armor-bar {
@@ -56,6 +61,8 @@
     width: 80px;
     height: 20px;
     background-color: rgb(110, 151, 240);
+    background: linear-gradient(to top, rgb(110, 151, 240), rgb(168, 195, 255));
+    box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.185);
     position: relative;
     z-index: 2;
 }
@@ -76,25 +83,35 @@
     width: 80px;
     height: 20px;
     background-color: rgb(49, 212, 85);
+    background: linear-gradient(to top, rgb(49, 212, 85), rgb(187, 253, 200));
+    box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.185);
     position: relative;
     z-index: 2;
 }
 
 .card-all {
-    background-color: greenyellow;
-    width: 100px;
-    height: 100px;
+    background-color: gold;
+    width: 20%;
+    min-width: 80px;
+    max-width: 10vh;
+    height: 90%;
     justify-self: center;
+    border: 1px solid white;
+    box-shadow: 8px 1.5px 2px rgba(151, 151, 151, 0.719);
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .card-hand {
-    background-color: rgb(223, 218, 199);
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     overflow-y: auto;
     position: relative;
     padding: 0px 7%;
+    margin: 0px 1%;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.151);
 }
 
 .card-play {
@@ -103,7 +120,11 @@
     align-items: center;
     width: 100px;
     height: 100px;
-    background-color: rgb(180, 206, 149);
+    background-color: rgba(182, 182, 182, 0.842);
+    border: 3px solid rgba(172, 172, 172, 0.986);
+    box-shadow: 1px 1px 3px rgba(160, 161, 163, 0.794);
+    color: #fff;
+    font-size: 1.3em;
 }
 
 .god1 {
@@ -111,7 +132,6 @@
     grid-area: god1;
     grid-template-columns: 100px 1fr;
     grid-template-rows: 1fr;
-    /* background-color: #ddd; */
 }
 
 .box-god {
@@ -136,7 +156,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(212, 223, 199); */
 }
 
 .god2 {
@@ -144,11 +163,11 @@
     grid-area: god2;
     grid-template-columns: 1fr 100px;
     grid-template-rows: 1fr;
-    /* background-color: #ddd; */
 }
 
 .card-all2 {
     grid-area: card-all2;
+    
 }
 
 .card-hand2 {
@@ -160,7 +179,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(168, 224, 180); */
+    border: 1px solid rgba(0, 0, 0, 0.185);
+    margin: 0px 12px;
 }
 
 .hr {
@@ -171,7 +191,6 @@
 }
 
 .point1 {
-    /* background-color: var(--bg-point); */
     color: red;
 }
 
@@ -181,10 +200,12 @@
     justify-content: center;
     background-color: rgb(79, 121, 238);
     background-repeat: no-repeat;
-    background: linear-gradient(rgb(79, 121, 238), white);
+    background: linear-gradient(to top, rgb(95, 133, 238), rgba(95, 133, 238, 0.383));
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 50%;
     height: 90px;
     width: 90px;
+    margin: 0px 1%;
     align-self: center;
     position: relative;
 }
@@ -196,11 +217,11 @@
     left: 40%; */
     font-size: 1.8em;
     margin: 0px;
-    color: #000;
+    color: #eee;
 }
 
 .bd1 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .card {
@@ -208,20 +229,31 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 80px;
+    width: 12%;
     min-width: 80px;
+    max-width: 10vh;
     height: 90%;
-    margin: 6px auto;
-    border: 1px solid gold;
-    background-color: aliceblue;
+    margin: 3px 12px;
+    border: 1px solid white;
     bottom: 1%;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.card1 {
+    background-color: rgb(223, 199, 199);
+}
+
+.card2 {
+    background-color: gold;
 }
 
 .card:focus {
     outline: red auto 5px;
 }
 
-.hr button {
+.hr {
     height: 50px;
     border: none;
 }
@@ -323,4 +355,43 @@
     justify-content: center;
     color: #ddd;
     cursor: pointer;
+}
+
+.btn-ok {
+    background-color: #4ef09a;
+    background: linear-gradient(to top, #4ef09a, #7ffcb9da);
+    /* border: 5px solid #85f6ba; */
+    border: none;
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 10%;
+    margin-right: 1%;
+    font-size: 18px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.btn-ok:hover {
+    border: 2px solid #4ef09a;
+}
+
+.btn-sell {
+    background-color: #878b89;
+    background: linear-gradient(to top, #9b9b9b, #c3c3c3c9);
+    border: none;
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 10%;
+    margin-left: 1%;
+    font-size: 18px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.btn-sell:hover {
+    border: 2px solid #878b89;
+}
+
+@media only screen and (min-width: 1050px) {
+
 }
