--- a/font-end/react-app/src/game_play.css
+++ b/font-end/react-app/src/game_play.css
@@ -18,7 +18,7 @@
                          "god2 god2 god2";              
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(7, 1fr);
-    grid-gap: 12px;
+    grid-gap: 6px;
     background-color: #41dfd218;
     background: linear-gradient(to bottom, #41dfd218, #5ae0d563);
     background-repeat: no-repeat;
@@ -29,46 +29,58 @@
 
 .god {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     font-size: 2em;
     color: black;
-    width: 100px;
-    height: 100px;
+    width: 9vmax;
+    height: 9vmax;
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 50%;
-    justify-self: center;
-    align-self: center;
     background-color: rgb(223, 199, 221);
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.849);
-    position: relative;
+    align-self: center;
+    /* position: absolute; */
     z-index: 1;
 }
 
 .god-self {
-    bottom: 10px;
+    bottom: 6px;
 }
 
 .god-enemy {
-    top: 10px;
+    top: 6px;
 }
 
 .armor-bar {
     display: flex;
-    justify-content: center;
     align-items: center;
+    align-self: center;
     font-size: 1em;
-    width: 80px;
+    width: 110px;
     height: 20px;
-    background-color: rgb(110, 151, 240);
-    background: linear-gradient(to top, rgb(110, 151, 240), rgb(168, 195, 255));
     box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.185);
+    /* position: absolute; */
     position: relative;
+    margin: 0 auto;
     z-index: 2;
 }
 
-.armor-bar-none {
-    display: none;
+.armor-bar-color {
+    height: 100%;
+    background-color: rgb(195, 197, 202);
+    background: linear-gradient(to top, rgb(195, 197, 202), rgb(230, 232, 236));
+}
+
+.armor-bar p {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1em;
+}
+
+.armor-bar-self {
+    top: 0%;
 }
 
 #armor-bar-hidden {
@@ -77,24 +89,36 @@
 
 .hp-bar {
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size: 1em;
-    width: 80px;
+    align-self: center;
+    width: 110px;
     height: 20px;
-    background-color: rgb(49, 212, 85);
-    background: linear-gradient(to top, rgb(49, 212, 85), rgb(187, 253, 200));
     box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.185);
+    /* border: 1px solid rgba(158, 158, 158, 0.705); */
     position: relative;
     z-index: 2;
+}
+
+.hp-bar-color {
+    height: 100%;
+    background-color: rgb(49, 212, 85);
+    background: linear-gradient(to top, rgb(49, 212, 85), rgb(187, 253, 200));
+}
+
+.hp-bar p {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1em;
 }
 
 .card-all {
     background-color: gold;
     width: 20%;
     min-width: 80px;
-    max-width: 10vh;
-    height: 90%;
+    max-width: 2vw;
+    height: 100%;
     justify-self: center;
     border: 1px solid white;
     box-shadow: 8px 1.5px 2px rgba(151, 151, 151, 0.719);
@@ -108,18 +132,19 @@
     align-items: center;
     overflow-y: auto;
     position: relative;
-    padding: 0px 7%;
     margin: 0px 1%;
     background-color: rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.151);
+    height: 100%;
 }
 
 .card-play {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 100px;
+    width: 20vw;
+    max-width: 90px;
+    height: 11vh;
     background-color: rgba(182, 182, 182, 0.842);
     border: 3px solid rgba(172, 172, 172, 0.986);
     box-shadow: 1px 1px 3px rgba(160, 161, 163, 0.794);
@@ -128,10 +153,11 @@
 }
 
 .god1 {
-    display: grid;
     grid-area: god1;
-    grid-template-columns: 100px 1fr;
-    grid-template-rows: 1fr;
+    display: inline-flex;
+    justify-content: center;
+    position: relative;
+    height: 15vh;
 }
 
 .box-god {
@@ -139,16 +165,20 @@
     flex-direction: column;
     justify-self: center;
     justify-content: center;
-    align-items: center;
+    margin: 0 auto;
+    height: 100%;
+    /* position: relative; */
 }
 
 .card-all1 {
     grid-area: card-all1;
     background-color: rgb(223, 199, 199);
+    height: 14vh;
 }
 
 .card-hand1 {
     grid-area: card-hand1;
+    height: 14vh;
 }
 
 .card-play1 {
@@ -156,22 +186,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 14vh;
 }
 
 .god2 {
-    display: grid;
+    /* display: grid; */
+    display: inline-flex;
+    justify-content: center;
     grid-area: god2;
-    grid-template-columns: 1fr 100px;
-    grid-template-rows: 1fr;
+    position: relative;
+    height: 15vh;
+    /* grid-template-columns: 1fr 100px; */
+    /* grid-template-rows: 1fr; */
 }
 
 .card-all2 {
     grid-area: card-all2;
-    
+    height: 14vh;
 }
 
 .card-hand2 {
     grid-area: card-hand2;
+    height: 14vh;
 }
 
 .card-play2 {
@@ -181,13 +217,15 @@
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.185);
     margin: 0px 12px;
+    height: 14vh;
 }
 
 .hr {
     grid-area: hr;
-    align-self: center;
     display: inline-flex;
     justify-content: space-between;
+    align-items: center;
+    height: 6vh;
 }
 
 .point1 {
@@ -203,8 +241,10 @@
     background: linear-gradient(to top, rgb(95, 133, 238), rgba(95, 133, 238, 0.383));
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 50%;
-    height: 90px;
-    width: 90px;
+    height: 7vmax;
+    width: 7vmax;
+    max-width: 80px;
+    max-height: 80px;
     margin: 0px 1%;
     align-self: center;
     position: relative;
@@ -231,7 +271,7 @@
     text-align: center;
     width: 12%;
     min-width: 80px;
-    max-width: 10vh;
+    max-width: 10vw;
     height: 90%;
     margin: 3px 12px;
     border: 1px solid white;
@@ -253,11 +293,6 @@
     outline: red auto 5px;
 }
 
-.hr {
-    height: 50px;
-    border: none;
-}
-
 #rooms {
     display: flex;
     flex-direction: column;
@@ -267,25 +302,31 @@
 .card-detail {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    word-wrap: break-word;
+    /* word-wrap: break-word; */
     margin-left: 12px;
-    height: 100%;
+    height: 90%;
     width: 60%;
-    text-align: center;
+    font-family: 'Kanit', sans-serif;
+    position: relative;
 }
 
 .card-description {
     text-align: start;
-    height: 90%;
-    font-family: 'Kanit', sans-serif;
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    margin: 0;
+    /* font-size: 4vw; */
 }
 
 .card-point {
-    position: relative;
-    text-align: end;
+    position: absolute;
     bottom: 1px;
     height: 10%;
+    font-size: .9em;
+    bottom: 12px;
+    margin: 0;
+    right: 6px;
 }
 
 .box-display-win {
@@ -363,8 +404,10 @@
     /* border: 5px solid #85f6ba; */
     border: none;
     color: #fff;
-    width: 60px;
-    height: 60px;
+    width: 10vw;
+    height: 100%;
+    max-width: 60px;
+    max-height: 60px;
     border-radius: 10%;
     margin-right: 1%;
     font-size: 18px;
@@ -380,8 +423,10 @@
     background: linear-gradient(to top, #9b9b9b, #c3c3c3c9);
     border: none;
     color: #fff;
-    width: 60px;
-    height: 60px;
+    width: 10vw;
+    height: 100%;
+    max-width: 60px;
+    max-height: 60px;
     border-radius: 10%;
     margin-left: 1%;
     font-size: 18px;
@@ -390,6 +435,32 @@
 
 .btn-sell:hover {
     border: 2px solid #878b89;
+}
+
+.player-enemy-name {
+    margin: 0;
+    width: 30%;
+    position: absolute;
+    word-wrap: break-word;
+    align-self: center;
+    text-align: end;
+    font-size: 24px;
+    font-weight: 500;
+    right: 16px;
+    color: rgb(63, 63, 63);
+}
+
+.player-self-name {
+    margin: 0;
+    width: 30%;
+    position: absolute;
+    word-wrap: break-word;
+    align-self: center;
+    font-size: 24px;
+    font-weight: 500;
+    left: 16px;
+    color: rgb(63, 63, 63);
+    /* text-shadow: 1px 1px rgba(0, 0, 0, 0.294); */
 }
 
 @media only screen and (min-width: 1050px) {
